# cross-contract-calls

./: .gitignore  Cargo.toml  README-concepts.md  README.md  asconfig.json  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  tests-advanced-rs.yml  tests-advanced-ts.yml  tests-simple-rs.yml  tests-simple-ts.yml  tests.yml  transfer-issue.yml
__tests__/: test-cross-contract-call.ava.js
__tests__/integration/: test-cross-contract-call.ava.js
contract/: README.md
contract-advanced-rs/: Cargo.toml  README.md  test.sh
contract-advanced-rs/src/: batch_actions.rs  lib.rs  multiple_contracts.rs  similar_contracts.rs
contract-advanced-rs/tests/: tests.rs
contract-advanced-rs/tests/contracts/hello-near/: Cargo.toml
contract-advanced-ts/: README.md  ava.config.cjs  package-lock.json  package.json
contract-advanced-ts/sandbox-ts/: main.ava.ts
contract-advanced-ts/src/: contract.ts
contract-hello-rs/: Cargo.toml
contract-simple-rs/: Cargo.toml  README.md  test.sh
contract-simple-rs/src/: external.rs  external_contract.rs  high_level.rs  lib.rs  low_level.rs
contract-simple-rs/tests/: tests.rs
contract-simple-ts/: README.md  ava.config.cjs  package.json
contract-simple-ts/sandbox-ts/: main.ava.ts  package.json
contract-simple-ts/src/: contract.ts
contract/src/: contract.ts
contracts/: simulation-helpers.js
cross-contract-advanced-rs/: package.json
cross-contract-hello-js/: package.json
cross-contract-hello-rs/: package.json
src/: index.js  index.ts
xcc-advanced-example/: consolodate.sh
(+50 files in other folders)
