[package]
name = "hello-near"
description = "Hello Near Example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.6.0"

[dev-dependencies]
near-sdk = { version = "5.6.0", features = ["unit-testing"] }
near-workspaces = { version = "0.15.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
